Fix text truncation on Ionic

--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "name": "Sliding Text Improved"
       }
     }
+  },
+  "devDependencies": {
+    "@fitbit/sdk": "~1.0.0",
+    "@fitbit/sdk-cli": "^1.0.0"
   }
 }
