updated name, adjusted readme

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "fitbit": {
     "appUUID": "457c0598-4302-41b6-b232-ddb0a56bd495",
     "appType": "clockface",
-    "appDisplayName": "Sliding Text Improved SDK5",
+    "appDisplayName": "Sliding Text Improved+",
     "iconFile": "resources/icon.png",
     "wipeColor": "#f44336",
     "requestedPermissions": [
@@ -18,7 +18,7 @@
     ],
     "i18n": {
       "en-US": {
-        "name": "Sliding Text Improved SDK5"
+        "name": "Sliding Text Improved+"
       }
     },
     "defaultLanguage": "en-US"
